Setup of the redux, redux-actions, redux-logger and redux-saga

--- a/.eslintrc
+++ b/.eslintrc
@@ -46,7 +46,7 @@
         "eqeqeq": [ "error", "always" ],
         "func-call-spacing": [ "error", "never" ],
         "function-paren-newline": [ "error", "consistent" ],
-        "generator-star-spacing": [ "error", { "before": true, "after": false } ],
+        "generator-star-spacing": [ "error", { "before": false, "after": true } ],
         "indent": [ "error", 4 ],
         "init-declarations": [ "error", "always" ],
         "jsx-quotes": [ "error", "prefer-double" ],
@@ -82,7 +82,6 @@
         }],
         "no-floating-decimal": "error",
         "no-implied-eval": "error",
-        "no-inline-comments": "error",
         "no-labels": "error",
         "no-label-var": "error",
         "no-lonely-if": "error",
