--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "react-test-renderer": "^16.4.2",
         "redux": "^4.0.0",
         "redux-actions": "^2.6.1",
+        "redux-devtools-extension": "^2.13.5",
         "redux-immutable": "^4.0.0",
         "redux-logger": "^3.0.6",
         "redux-mock-store": "^1.5.3",
