--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "html-webpack-plugin": "2.29.0",
         "i18next": "^11.6.0",
         "i18next-browser-languagedetector": "^2.2.3",
+        "immer": "^1.5.0",
+        "immutable": "^3.8.2",
         "jest": "^23.5.0",
         "moment": "^2.22.2",
         "object-assign": "4.1.1",
