Adding bootstrap design and started list posts page

--- a/.jestconfig.json
+++ b/.jestconfig.json
@@ -40,9 +40,11 @@
         "^@/(.*)$": "<rootDir>/src/$1",
         "^cfg/(.*)$": "<rootDir>/src/_config/$1",
         "^components/(.*)$": "<rootDir>/src/components/$1",
+        "^(config)$": "<rootDir>/src/_config/config",
         "^constants/(.*)$": "<rootDir>/src/constants/$1",
         "^containers/(.*)$": "<rootDir>/src/containers/$1",
         "^css/(.*)$": "<rootDir>/src/_css/$1",
+        "^environments/(.*)$": "<rootDir>/src/environments/$1",
         "^(http)$": "<rootDir>/src/_config/http",
         "^hoc/(.*)$": "<rootDir>/src/hoc/$1",
         "^(i18n)$": "<rootDir>/src/_translate/i18n",
