--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "react-redux": "^5.0.7",
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
+        "react-star-rating-component": "^1.4.1",
         "react-test-renderer": "^16.4.2",
         "redux": "^4.0.0",
         "redux-actions": "^2.6.1",
