--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "eslint-plugin-react": "^7.11.1",
         "extract-text-webpack-plugin": "3.0.2",
         "file-loader": "1.1.5",
+        "final-form": "^4.10.0",
         "fs-extra": "3.0.1",
         "history": "^4.7.2",
         "html-webpack-plugin": "2.29.0",
@@ -46,12 +47,14 @@
         "react": "^16.4.2",
         "react-dev-utils": "^5.0.2",
         "react-dom": "^16.4.2",
+        "react-final-form": "^3.6.5",
         "react-i18next": "^7.11.0",
         "react-notification-system": "^0.2.17",
         "react-notification-system-redux": "^1.2.0",
         "react-redux": "^5.0.7",
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
+        "react-simplemde-editor": "^3.6.16",
         "react-star-rating-component": "^1.4.1",
         "react-test-renderer": "^16.4.2",
         "redux": "^4.0.0",
