--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "postcss-flexbugs-fixes": "3.2.0",
         "postcss-loader": "2.0.8",
         "promise": "8.0.1",
+        "pubsub-js": "^1.6.1",
         "raf": "3.4.0",
         "react": "^16.4.2",
         "react-dev-utils": "^5.0.2",
@@ -55,7 +56,6 @@
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
         "react-simplemde-editor": "^3.6.16",
-        "react-star-rating-component": "^1.4.1",
         "react-test-renderer": "^16.4.2",
         "redux": "^4.0.0",
         "redux-actions": "^2.6.1",
@@ -65,6 +65,7 @@
         "redux-mock-store": "^1.5.3",
         "redux-saga": "^0.16.0",
         "resolve": "1.6.0",
+        "sort-by": "^1.2.0",
         "style-loader": "0.19.0",
         "sw-precache-webpack-plugin": "0.11.4",
         "url-loader": "0.6.2",
